<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="488dp"
            android:layout_height="413dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="64sp"
                android:text="@string/rush"
                android:textColor="@color/red_color"
                android:textStyle="bold"
                android:fontFamily="@font/keaniaoneregular"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="64sp"
                android:text="@string/hours"
                android:textColor="@color/orange_color"
                android:textStyle="bold"
                android:fontFamily="@font/keaniaoneregular"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/play_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/keaniaoneregular"
                android:text="@string/button_play"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/levels_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:backgroundTint="@color/orange_color"
                android:fontFamily="@font/keaniaoneregular"
                android:text="@string/button_levels"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>