<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/logo_menu_btn"
            android:layout_width="174dp"
            android:layout_height="147dp"
            android:contentDescription="@string/logo"
            android:focusable="true"
            android:src="@drawable/logo"
            android:clickable="true"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="48sp"
                android:text="@string/rush"
                android:textColor="@color/red_color"
                android:textStyle="bold"
                android:fontFamily="@font/keaniaoneregular"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="48sp"
                android:text="@string/hours"
                android:textColor="@color/orange_color"
                android:textStyle="bold"
                android:fontFamily="@font/keaniaoneregular"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="48sp"
                android:text="@string/time"
                android:textColor="@color/orange_color"
                android:textStyle="bold"
                android:fontFamily="@font/keaniaoneregular"/>
            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@color/red_color"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <!-- Tabuleiro -->
        <FrameLayout
            android:id="@+id/boardContainer"
            android:layout_width="390dp"
            android:layout_height="390dp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Tabuleiro como imagem de fundo -->
            <ImageView
                android:id="@+id/board"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/tabuleiro"
                android:contentDescription="@string/tabuleiro" />

            <!-- Carro 1 (2x1 horizontal) -->
            <ImageView
                android:id="@+id/car1"
                android:layout_width="110dp"
                android:layout_height="54dp"
                android:src="@drawable/car_sh_orange"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp" />

            <!-- Carro 2 (1x2 vertical) -->
            <ImageView
                android:id="@+id/car2"
                android:layout_width="54dp"
                android:layout_height="110dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="75dp"
                android:src="@drawable/car_sv_black" />

            <!-- Carro 3 (1x3 vertical) -->
            <ImageView
                android:id="@+id/car3"
                android:layout_width="60dp"
                android:layout_height="170dp"
                android:layout_marginStart="321dp"
                android:layout_marginTop="75dp"
                android:src="@drawable/car_bv_blue" />

            <!-- Carro 4 (3x1 horizontal) -->
            <ImageView
                android:id="@+id/car4"
                android:layout_width="175dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="322dp"
                android:src="@drawable/car_bh_lightblue" />

            <!-- Outros carros podem ser adicionados aqui -->
        </FrameLayout>

        <Button
            android:id="@+id/finishLevelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_level_btn"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/orange_color"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/keaniaoneregular"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/levels_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_levels"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/keaniaoneregular"
                android:layout_marginRight="50dp"/>

            <Button
                android:id="@+id/hint_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="💡"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/keaniaoneregular"
                />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>